--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs"
+  "type": "commonjs",
+  "dependencies": {
+    "mysql": "^2.18.1"
+  }
 }
